# lvgl_linux_opengl

./: .gitignore  README.md  cameraapp.bb
cameraapp/: Makefile.am  cameraapp.init.sh  cameraapp.service  configure.ac
cameraapp/project/: Makefile.am  fbtty.c  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  main.c
cameraapp/project/lv_demos/src/lv_demo_widgets/: lv_demo_widgets.c
cameraapp/project/lv_drivers/display/: drm.c  fbdev.c
cameraapp/project/lv_drivers/indev/: evdev.c
cameraapp/project/lvgl/src/core/: lv_indev.c  lv_refr.c
cameraapp/project/lvgl/src/misc/: lv_timer.c
cameraapp/project/nanovg/: demo.c  demo.h  example_gles2.c  nanovg.c  nanovg.h  nanovg_gl.h  perf.c
